<resources>
    <string name="app_name">SiTernaku</string>
    <string name="title_home">Home</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_setting">Settings</string>
    <string name="TextView2">Kalkulator Ternak Berfungsi untuk mengkalkulasikan ternak sesuai dari jumlah Ayam dan Kambing</string>
    <string name="kalkulator_ternak">🐓 Kalkulator Ternak 🐐</string>
    <string name="text2">Hitung pakan ternak kamu dengan mudah!</string>
    <string name="hitung">Hitung</string>
    <string name="about"><![CDATA[Aplikasi ini Menyajikan Artikel Trivia mengenai Hewan Ternak yang di prioritaskan disini adalah Ayam dan Kambing & juga di aplikasi ini kami menyediakan Fitur Kalkulator untuk menghitung takaran makan ternak yang cocok tergantung dari jumlah dan usia hewan ternak yang bapak/ibu miliki.]]></string>
    <string name="nodata">Belum ada trivia nih :( Silahkan ditambah dulu ya</string>
    <string name="todo">TODO</string>
    <string name="link_terkait">Link Terkait :</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="title">Title</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="link_artikel_opsional">Link Artikel (opsional)</string>
    <string name="simpan_artikel">Simpan Artikel</string>
    <string name="kalkulator_ayam_menghitung_pendapatan">Kalkulator Ayam (Teknis &amp; Pendapatan)</string>
    <string name="pakan_harian_amp_biaya"><![CDATA[Pakan Harian & Biaya]]></string>
    <string name="jumlah_ayam">Jumlah Ayam</string>
    <string name="rata_rata_pakan_per_ekor_kg">Rata-rata pakan per ekor (kg)</string>
    <string name="harga_pakan_per_kg">Harga Pakan per Kg</string>
    <string name="hitung_pakan_amp_biaya"><![CDATA[Hitung Pakan & Biaya]]></string>
    <string name="hasil_kebutuhan_pakan_amp_biaya_akan_tampil_di_sini"><![CDATA[Hasil kebutuhan pakan & biaya akan tampil di sini]]></string>
    <string name="produksi_telur_ayam_petelur">Produksi Telur (ayam petelur)</string>
    <string name="jumlah_ayam_betina">Jumlah Ayam Betina</string>
    <string name="produksi_harian">% Produksi Harian</string>
    <string name="harga_telur_per_butir">Harga Telur per Butir</string>
    <string name="hitung_produksi_telur">Hitung Produksi Telur</string>
    <string name="hasil_produksi_telur_amp_pendapatan_akan_tampil_di_sini"><![CDATA[Hasil produksi telur & pendapatan akan tampil di sini]]></string>
    <string name="bobot_panen_ayam_pedaging">Bobot Panen (ayam pedaging)</string>
    <string name="rata_rata_bobot_panen_kg">Rata-rata Bobot Panen (kg)</string>
    <string name="harga_jual_per_kg">Harga Jual per Kg</string>
    <string name="hitung_bobot_amp_pendapatan_panen"><![CDATA[Hitung Bobot & Pendapatan Panen]]></string>
    <string name="hasil_bobot_amp_pendapatan_panen_akan_tampil_di_sini"><![CDATA[Hasil bobot & pendapatan panen akan tampil di sini]]></string>
    <string name="tingkat_mortalitas">Tingkat Mortalitas</string>
    <string name="persentase_mortalitas">Persentase ayam mati untuk memantau kesehatan dan kerugian peternakan.</string>
    <string name="hitung_estimasi_ayam_hidup">Hitung Kerugian Ayam yang Mati</string>
    <string name="estimasi_ayam_hidup_amp_dampak_pendapatan_akan_tampil_di_sini"><![CDATA[Estimasi ayam hidup & dampak pendapatan akan tampil di sini]]></string>
    <string name="rekap_laporan">Rekap Laporan</string>
    <string name="simpan_ringkasan_laporan">Simpan Ringkasan Laporan</string>
    <string name="simpan_ringkasan_laporan_kambing">Simpan Ringkasan Laporan</string>
    <string name="rekap_laporan_kambing">Rekap Laporan</string>
    <string name="hasil_perkembangbiakan_amp_pendapatan_tambahan_akan_tampil_di_sini"><![CDATA[Hasil perkembangbiakan & pendapatan tambahan akan tampil di sini]]></string>
    <string name="hitung_populasi_amp_pendapatan"><![CDATA[Hitung Populasi & Pendapatan]]></string>
    <string name="harga_jual_anak">Harga Jual Anakan</string>
    <string name="rata_rata_anak_per_tahun">Rata-rata Anak per Tahun</string>
    <string name="jumlah_indukan">Jumlah Indukan</string>
    <string name="perkembangbiakan">Perkembangbiakan</string>
    <string name="hasil_produksi_susu_amp_pendapatan_akan_tampil_di_sini"><![CDATA[Hasil produksi susu & pendapatan akan tampil di sini]]></string>
    <string name="hitung_produksi_amp_pendapatan"><![CDATA[Hitung Produksi & Pendapatan]]></string>
    <string name="harga_susu_per_liter">Harga Susu per Liter</string>
    <string name="liter_susu_per_ekor_per_hari">Liter Susu per ekor per hari</string>
    <string name="jumlah_kambing_perah">Jumlah Kambing Perah</string>
    <string name="produksi_susu_jika_kambing_perah">Produksi Susu (Jika Kambing Perah)</string>
    <string name="bobot_pendapatan_kambing"><![CDATA[Hasil bobot & pendapatan panen akan tampil di sini]]></string>
    <string name="hitung_bobot_amp_pendapatan"><![CDATA[Hitung Bobot & Pendapatan]]></string>
    <string name="harga_jual_per_kg_kambing">Harga Jual per Kg</string>
    <string name="rata_rata_pertambahan_bobot_kg">Rata-rata Pertambahan Bobot (kg)</string>
    <string name="bobot_awal_kg">Bobot Awal (kg)</string>
    <string name="jumlah_kambing">Jumlah Kambing</string>
    <string name="bobot_panen">Bobot Panen</string>
    <string name="kebutuhan_pakan_kambing"><![CDATA[Hasil kebutuhan pakan & biaya akan tampil di sini]]></string>
    <string name="hitung_pakan_amp_biaya_kambing"><![CDATA[Hitung Pakan & Biaya]]></string>
    <string name="harga_pakan_per_kg_kambing">Harga Pakan per Kg</string>
    <string name="konsentrat_per_ekor_opsional">Konsentrat per ekor (opsional)</string>
    <string name="kebutuhan_hijauan_per_ekor_kg">Kebutuhan Hijauan per ekor (kg)</string>
    <string name="jumlah_kambing_kambing">Jumlah Kambing</string>
    <string name="pakan_harian_amp_biaya_kambing"><![CDATA[Pakan Harian & Biaya]]></string>
    <string name="kalkulator_kambing_teknis_bisnis">Kalkulator Kambing (Teknis &amp; Pendapatan)</string>
    <string name="sorry_belum_ada_data_nih_silahkan_di_tambah_dulu_datanya_ya">Sorry belum ada data nih :( Silahkan di tambah dulu datanya ya.</string>
    <string-array name="jenis_hewan">
        <item>Ayam</item>
        <item>Kambing</item>
    </string-array>
</resources>