<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.siternaku.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.dicoding.siternaku.ui.calculator.CalculatorFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dicoding.siternaku.ui.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>